# intersect

./: .gitignore  LICENSE  M7003_finalpiece_24000114067.ipynb  README.md  curl_test_job_details.sh  hello.py  jobs-09d3535f-f34f-4e1f-a91b-abe81373b76d.txt  jobs-2d0083f6-79e4-4771-8048-882c4a102486.txt  jobs-3.txt  proxies.txt  pyproject.toml  simple_curl_test.md  summary.ipynb
.devcontainer/: devcontainer.json
intersect/: bm25.py  cluster_viz.py  duckdb_storage.py  embedding.py  etl.py  extract.py  extract_descriptions.py  fake_files.py  fake_files_2.py  generate_descriptions.py  generate_embeddings.ipynb  get_jobs.py  intersect.py  lexical_search.py  ner.py  permutation.py  rerank.py  scrape_descriptions.py  semantic_search.py  streamlit_app.py  tfidf.py  transform.py  utils.py
intersect/algorithms/: clustering.py  dimensionality_reduction.py  lexical_search.py  ner.py  pca.py  permutation.py  rerank.py  semantic_search.py  visualizations.py  wordcloud.py
intersect/components/: __init__.py  footer.py  job_search.py  results_display.py  search_form.py
intersect/config/: __init__.py  constants.py
intersect/data/: change.feather  data.feather  facilitator.feather  fun.feather  jobs-144.feather  jobs-25.feather  jobs-manual.feather  jobs2.feather  law-ai.feather  law.feather  leadership.feather  output_file.feather  prompt.txt
intersect/data/cvs/: ds.txt  g.txt  h.txt  j.txt  king.txt  nurse.txt
intersect/data/new/: theirstack.csv  theirstack_description.csv
intersect/data/raw/: data-04053952-1b15-4868-ae5a-f0bd5864e362.txt  data-6fa9bbce-22ce-461f-bafb-a5eaed02be66.txt  data-7adeee6c-d569-4ade-b2d2-1deb9524ce1c.txt  data-d458a3c3-7c9c-4eda-a697-49d8ca3df7c9.txt  data-ffd78c7f-ccb7-49d6-83d7-92f435c525bd.txt  jobs-1.txt  jobs.txt
intersect/data/raw/ai/: jobs-2.txt
intersect/data/raw/change/: jobs-39c6d3b2-fb52-442a-8a4c-2825ccd4375e.txt  (+5 more)
intersect/data_sources/: adapters.py  preprocessing.py  reed_client.py  reed_types.py  theirstack_client.py  types.py
intersect/utils/: embedding.py  read_pdf.py  utils.py
tests/: manual.ipynb  manual.py  test_duckdb_storage.py  test_get_jobs.py
(+52 files in other folders)
