[project]
name = "nlp-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "openai>=1.59.3",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "selectolax>=0.3.27",
]
