[project]
name = "nlp-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.2.6",
    "cohere>=5.13.6",
    "matplotlib>=3.10.0",
    "openai>=1.59.3",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "pypdf>=5.1.0",
    "pystemmer>=2.2.0.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "spacy>=3.8.3",
    "streamlit>=1.41.1",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "selectolax>=0.3.27",
]
